--- a/Project_1/.gitignore
+++ b/Project_1/.gitignore
@@ -2,7 +2,16 @@
 *.o
 *.so
 *.a
+*.pro
+*.stash
+*.exe
+*.obj
 # temporary files:
+*.Release
+*.txt
+*.Debug
+Makefile
+build-*/
 *.pyc
 *.bak
 *.swp
